[package]
name = "ruping"
version = "0.2.0"
edition = "2024"
authors = ["ruping-dev"]
description = "A Rust implementation of Windows ping command"
license = "MIT"

[[bin]]
name = "ruping"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
socket2 = "0.5"
tokio = { version = "1.0", features = ["full"] }
dns-lookup = "2.0"
byteorder = "1.5"
rand = "0.8"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
ipconfig = "0.3"
